# rust-payjoin

./: Cargo.toml  flake.nix
.github/workflows/: rust.yml
payjoin/: Cargo.toml
payjoin-cli/: Cargo.toml
payjoin-ffi/contrib/: test.sh
payjoin-ffi/src/: lib.rs
payjoin-ffi/src/receive/: mod.rs
payjoin-test-utils/: Cargo.toml
payjoin-test-utils/src/: lib.rs
payjoin/src/: bech32.rs  directory.rs  lib.rs
payjoin/src/core/: error.rs  hpke.rs  into_url.rs  mod.rs  no_std_tests.rs  ohttp.rs  persist.rs  request.rs  time.rs  url.rs
payjoin/src/core/psbt/: mod.rs
payjoin/src/core/receive/: error.rs  mod.rs  optional_parameters.rs
payjoin/src/core/receive/common/: mod.rs
payjoin/src/core/receive/v1/: error.rs
payjoin/src/core/receive/v2/: error.rs  mod.rs  session.rs
payjoin/src/core/send/: error.rs  mod.rs  v1.rs
payjoin/src/core/send/v2/: error.rs  mod.rs  session.rs
payjoin/src/core/uri/: error.rs  mod.rs  v2.rs
payjoin/tests/: integration.rs
