[workspace]
members = [
  "fuzz",
  "ohttp-relay",
  "payjoin",
  "payjoin-cli",
  "payjoin-test-utils",
  "payjoin-ffi",
  "payjoin-mailroom",
]
resolver = "2"

[patch.crates-io]
payjoin-fuzz = { path = "fuzz" }
ohttp-relay = { path = "ohttp-relay" }
payjoin = { path = "payjoin" }
payjoin-mailroom = { path = "payjoin-mailroom" }
payjoin-test-utils = { path = "payjoin-test-utils" }

[profile.crane]
inherits = "test"
debug = false
base64 = { version = "=0.21.7", default-features = false }
