[package]
name = "payjoin"
version = "1.0.0-rc.2"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Payjoin Library implementing BIP 78 and BIP 77 batching protocols."
repository = "https://github.com/payjoin/rust-payjoin"
readme = "../README.md"
keywords = ["bip78", "payjoin", "bitcoin"]
categories = [
  "api-bindings",
  "cryptography::cryptocurrencies",
  "network-programming",
]
license = "MITNFA"
resolver = "2"
edition = "2021"
rust-version = "1.85"
exclude = ["tests"]

[features]
default = ["std", "v2", "v2-ohttp"]

alloc = []

std = [
  "alloc",
  "bitcoin/rand-std",
  "serde_json",
  "url/serde",
  "bitcoin_uri",
]

_core = [
  "alloc",
  "serde",
  "bitcoin/serde",
]

directory = []
v1 = ["_core"]

v2 = ["_core", "directory", "dep:url", "dep:hpke", "dep:ohttp", "dep:bhttp"]
v2-ohttp = ["std", "v2", "dep:hpke", "dep:bhttp", "dep:ohttp"]

io = ["v2-ohttp", "reqwest/rustls-tls"]
_manual-tls = ["reqwest/rustls-tls", "rustls"]
_test-utils = []


[dependencies]
bhttp = { version = "0.7.2", optional = true }
bitcoin = { version = "0.32.8", default-features = false, features = ["base64", "serde"] }
bitcoin_uri = { version = "0.1.0", optional = true }
hpke = { package = "bitcoin-hpke", version = "0.13.0", optional = true }
http = "1.4.0"
ohttp = { package = "bitcoin-ohttp", version = "0.6.0", optional = true }
reqwest = "0.12.28"
rustls = { version = "0.23.31", optional = true, default-features = false, features = ["ring"] }
serde = { version = "1.0.219", default-features = false, optional = true }
serde_json = { version = "1.0.142", optional = true }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
url = { version = "2.5.4", optional = true, default-features = false}
tokio = { version = "1.48.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
once_cell = "1.21.3"
payjoin-test-utils = { version = "0.0.1" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
